--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20" >
     <tr>
       <td>
-        <img src="C:\Users\POPE\Desktop\web development\images\pope.jpg" width="300" height="300" alt="pope's profile picture">
+        <img src="C:\Users\POPE\Desktop\web development\HTML - Personal Site\popecaan.jpg" width="300" height="300" alt="pope's profile picture">
       </td>
       <td>
         <h1>OBIORAH IGNATIUS POPE</h1>
