--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </td>
       <td>
         <h1>OBIORAH IGNATIUS POPE</h1>
-        <p>Student at <strong><em><a href="www.uniport.edu.ng">University Of PortHarcourt</a></em></strong></p>
+        <p>Student at <strong><em><a href="http://www.uniport.edu.ng/">University Of PortHarcourt</a></em></strong></p>
         <p>I am a crypto ethusiant and also a web developer.</p>
       </td>
     </tr>
