update cv website files

--- a/index.html
+++ b/index.html
@@ -3,85 +3,57 @@
 
 <head>
   <meta charset="utf-8">
-  <title>POPE'S PERSONAL SITE</title>
+  <title>pope</title>
+  <link rel="stylesheet" href="css\style.css">
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="20" >
-    <tr>
-      <td>
-        <img src="https://instagram.flos5-1.fna.fbcdn.net/v/t51.2885-19/s320x320/79293635_848193972286574_555891157490466816_n.jpg?_nc_ht=instagram.flos5-1.fna.fbcdn.net&_nc_ohc=J6GpZ8owhGYAX-OGmBT&oh=ecb3a4a9b465972cc4e8c9972123230c&oe=5EE83EEA" width="300" height="300" alt="pope's profile picture">
-      </td>
-      <td>
-        <h1>OBIORAH IGNATIUS POPE</h1>
-        <p>Student at <strong><em><a href="http://www.uniport.edu.ng/">University Of PortHarcourt</a></em></strong></p>
-        <p>I am a crypto ethusiant and also a web developer.</p>
-      </td>
-    </tr>
-  </table>
-  <hr size="3" noshade>
-  <h3>EDUCATION</h3>
-  <ul>
-    <li>
-      <strong><p>University Of Portharcourt <em>(2017-present)</em></p></strong>
-        <ul>
-          <li>B.Sc Civil And Environmental Engineering</li>
-        </ul>
-    </li>
-    <li>
-      <strong><p>Nigerian Navy Secondary School PortHarcourt <em>(2010-2016)</em></p></strong>
-        <ul>
-          <li>West African Examination Council (WAEC)</li>
-          <li>National Examination Council (NECO)</li>
-        </ul>
-    </li>
-  </ul>
-  <hr size="3" noshade>
-  <h3>SKILLS</h3>
-  <table>
-    <tr>
-      <td>
-        <table cellspacing="20">
-          <tr>
-            <td>
-              <strong>Web development</strong>
-            </td>
-            <td>
-              ⭐⭐
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <strong>Content writing</strong>
-            </td>
-            <td>
-              ⭐⭐⭐
-            </td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table cellspacing="20">
-          <tr>
-            <td>
-              <strong>AutoCad</strong>
-            </td>
-            <td>
-              ⭐
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <strong>App development</strong>
-            </td>
-            <td>
-              ⭐
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+  <div class="top-container">
+    <img class="top-cloud" src="images\cloud.png" alt="cloud-image">
+    <h1>I'm Pope</h1>
+    <h2>A crypto ethusiast and web developer</h2>
+    <img class="bottom-cloud" src="images\cloud.png" alt="cloud-image">
+    <img src="images\mountain.png" alt="mountain-image">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profile-pic" src="https://pbs.twimg.com/profile_images/1243741232209235968/zJ_TNgeh_400x400.jpg" alt="profile-pic">
+      <h2 class="hello">Hello.</h2>
+      <p class="profile-text"> I'm a crypto ethusiast and web developer/designer based in Portharcourt, Nigeria. I have passion for web design and love to create for web and mobile devices.i aslo love anything crypto looking forward to make the world a better place through blockchain technology.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <div class="skill-row1">
+        <h2 class="skill-header">MY SKILLS</h2>
+        <img class="skill-pic01" src="images\webdevicon.png" alt="skill-pic">
+        <h3>Web Development</h3>
+        <p>I am a developer, so i know how to create your website to run across devices using the latest technology.</p>
+      </div>
+      <div class="skill-row2">
+        <img class="skill-pic02" src="https://image.flaticon.com/icons/svg/686/686589.svg" alt="skill-pic">
+        <h3>Gaming</h3>
+        <p>I'm also good at playing games also. So if you need my skill it's available. </p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>I'm currently available for free lance work.</h3>
+      <p class="context">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then dont hesitate</p>
+      <a class="button" href="mailto:iobiorah23@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
+
+  <div class="bottom-container">
+    <a href="https://www.instagram.com/whoispope_/">Instagram</a>
+    <a href="https://twitter.com/thereald0ndadda">Twitter</a>
+    <a href="https://www.linkedin.com/in/pope-5242a6191/">LinkedIn</a>
+    <a href="https://github.com/ignatiusobiorah">Github</a>
+    <p class="copyright">copyright @ 2020 pope.inc</p>
+  </div>
 </body>
 
 </html>
