--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>I'm Pope</h1>
     <h2>A crypto ethusiast and web developer</h2>
     <img class="bottom-cloud" src="images\cloud.png" alt="cloud-image">
-    <img src="images\mountain.png" alt="mountain-image">
+    <img class="mountain" src="images\mountain.png" alt="mountain-image">
   </div>
 
   <div class="middle-container">
