update II for mobile interface

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="profile">
       <img class="profile-pic" src="https://pbs.twimg.com/profile_images/1243741232209235968/zJ_TNgeh_400x400.jpg" alt="profile-pic">
       <h2 class="hello">Hello.</h2>
-      <p class="profile-text"> I'm a crypto ethusiast and web developer/designer based in Portharcourt, Nigeria. I have passion for web design and love to create for web and mobile devices.i aslo love anything crypto looking forward to make the world a better place through blockchain technology.</p>
+      <p class="profile-text"> I'm a crypto ethusiast and web developer/designer based in Portharcourt, Nigeria. I have passion for web design and love to create for web and mobile devices. I aslo love anything crypto looking forward to make the world a better place through blockchain technology.</p>
     </div>
     <hr>
     <div class="skills">
